--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .main {
-  background-image: url("image/bg.jpg");
+  background-image: url("bg.jpg");
   background-position: center center;
   background-size: max(1200px, 100vw);
   background-repeat: no-repeat;
