--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .main {
-  background-image: url("https://assets.nflxext.com/ffe/siteui/vlv3/4d7bb476-6d8b-4c49-a8c3-7739fddd135c/deecf71d-7a47-4739-9e1a-31b6b0d55be7/IN-en-20240429-popsignuptwoweeks-perspective_alpha_website_large.jpg");
+  background-image: url("Bg.jpg");
   background-position: center center;
   background-size: max(1200px, 100vw);
   background-repeat: no-repeat;
